--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,22 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.hp.</groupId>
+  <groupId>com.cache4guice</groupId>
   <artifactId>cache4guice</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>cache4guice</name>
-  <url>http://maven.apache.org</url>
+  <description>AOP caching utility using Google Guice</description>
+  <url>https://github.com/dwatrous/cache4guice</url>
+  
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
